--- a/_news/2023-news1.md
+++ b/_news/2023-news1.md
@@ -1,4 +1,4 @@
 ---
-title: "Scientists Discover New Species of Bioluminescent Fish in Mariana Trench"
+title: "I awarded the Outstanding Graduate Student prize at DUT"
 date: 2023-11-28 08:15:00 -0500
 ---
