--- a/_news/2024-news2.md
+++ b/_news/2024-news2.md
@@ -1,6 +1,6 @@
 ---
 title: >-
-    "Our BMI@DLUT team awarded the <strong>🥈Second Prize</strong> and <strong>Student Award</strong> in the KDD Cup 2024, with Zhipeng Li and Zhewei Zhi, and supervised by Prof. Xianneng Li"
+    Our BMI@DLUT team awarded the <strong>🥈Second Prize</strong> and <strong>Student Award</strong> in the KDD Cup 2024, with Zhipeng Li and Zhewei Zhi, and supervised by Prof. Xianneng Li
     <a href="https://discourse.aicrowd.com/t/announcing-the-winners-of-amazon-kdd-cup-2024/10758" target="_blank">Announcement here<i class="fas fa-angle-double-right"></i></a>
 date: 2024-07-19 17:30:00 UTC
 ---
