--- a/_news/2025-news6.md
+++ b/_news/2025-news6.md
@@ -1,4 +1,4 @@
 ---
-title: "Supervised an gratuate student whose paper was accepted by AAAI 25 Main Track as poster,with the co-first author Zhewei ZHi and Yingyi Zhang"
+title: "Supervised an master paper accepted to AAAI 2026 as poster, with the co-first author by Zhewei Zhi and Yingyi Zhang."
 date: 2025-11-08 18:30:00 +0200
 ---
