--- a/_news/2025-news5.md
+++ b/_news/2025-news5.md
@@ -1,4 +1,4 @@
 ---
-title: "My first author paper was accepted by AAAI 26 Main Track as ORAL, with the co-first author Yingyi Zhang and Pengyue Jia."
+title: "My first author paper was accepted by AAAI 26 Main Track as <strong>🌟ORAL</strong>, with the co-first author Yingyi Zhang and Pengyue Jia."
 date: 2025-11-08 18:30:00 +0200
 ---
